@@ -11,6 +11,8 @@ import static org.junit.Assert.assertEquals;
 import org.junit.Before;
 import org.junit.Test;
 
+import es.tid.cosmos.mobility.data.MobDataUtil;
+import es.tid.cosmos.mobility.data.MobProtocol.MobData;
 import es.tid.cosmos.mobility.data.MobProtocol.PoiNew;
 import es.tid.cosmos.mobility.data.MobProtocol.TwoInt;
 import es.tid.cosmos.mobility.data.PoiNewUtil;
@@ -21,32 +23,33 @@ import es.tid.cosmos.mobility.data.TwoIntUtil;
  * @author dmicol
  */
 public class AdjGroupTypePoiClientReducerTest {
-    private ReduceDriver<ProtobufWritable<TwoInt>, ProtobufWritable<PoiNew>,
-            ProtobufWritable<TwoInt>, ProtobufWritable<TwoInt>> driver;
+    private ReduceDriver<ProtobufWritable<TwoInt>, ProtobufWritable<MobData>,
+            ProtobufWritable<TwoInt>, ProtobufWritable<MobData>> driver;
     
     @Before
     public void setUp() {
         this.driver = new ReduceDriver<ProtobufWritable<TwoInt>,
-                ProtobufWritable<PoiNew>, ProtobufWritable<TwoInt>,
-                ProtobufWritable<TwoInt>>(new AdjGroupTypePoiClientReducer());
+                ProtobufWritable<MobData>, ProtobufWritable<TwoInt>,
+                ProtobufWritable<MobData>>(new AdjGroupTypePoiClientReducer());
     }
     
     @Test
     public void testSomeMethod() throws IOException {
-        ProtobufWritable<PoiNew> pn1 = PoiNewUtil.createAndWrap(1, 2L, 3L, 4, 1);
-        ProtobufWritable<PoiNew> pn2 = PoiNewUtil.createAndWrap(5, 6L, 7L, 8, 0);
-        List<Pair<ProtobufWritable<TwoInt>, ProtobufWritable<TwoInt>>> results =
+        PoiNew pn1 = PoiNewUtil.create(1, 2L, 3L, 4, 1);
+        PoiNew pn2 = PoiNewUtil.create(5, 6L, 7L, 8, 0);
+        List<Pair<ProtobufWritable<TwoInt>, ProtobufWritable<MobData>>> res =
                 this.driver
                         .withInput(TwoIntUtil.createAndWrap(1, 2),
-                                   asList(pn1, pn2))
+                                   asList(MobDataUtil.createAndWrap(pn1),
+                                          MobDataUtil.createAndWrap(pn2)))
                 .run();
-        assertEquals(1, results.size());
-        final ProtobufWritable<TwoInt> keyWrapper = results.get(0).getFirst();
-        final ProtobufWritable<TwoInt> valueWrapper = results.get(0).getSecond();
+        assertEquals(1, res.size());
+        final ProtobufWritable<TwoInt> keyWrapper = res.get(0).getFirst();
+        final ProtobufWritable<MobData> valueWrapper = res.get(0).getSecond();
         keyWrapper.setConverter(TwoInt.class);
-        valueWrapper.setConverter(TwoInt.class);
+        valueWrapper.setConverter(MobData.class);
         final TwoInt key = keyWrapper.get();
-        final TwoInt value = valueWrapper.get();
+        final TwoInt value = valueWrapper.get().getTwoInt();
         assertEquals(3L, key.getNum1());
         assertEquals(7L, key.getNum2());
         assertEquals(1L, value.getNum1());
